--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://azees253.github.io/fly-walk",
+  "homepage": "https://azees253.github.io/",
   "name": "fly-walk",
   "private": true,
   "version": "0.0.0",
